--- a/app/templates/comment/edit.html.twig
+++ b/app/templates/comment/edit.html.twig
@@ -1,14 +1,14 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    {{ 'title.task_edit'|trans({'%id%': task.id|default('')}) }}
+    {{ 'title.comment_edit'|trans({'%id%': comment.id|default('')}) }}
 {% endblock %}
 
 {% block body %}
     {% include 'default/_form.html.twig' with {
-        page_title: 'title.task_edit'|trans({'%id%': task.id|default('')}),
+        page_title: 'title.comment_edit'|trans({'%id%': comment.id|default('')}),
         form: form,
         submit_label: 'action.edit'|trans,
-        back_to_list_path: 'task_index',
+        back_to_list_path: 'post_index',
     } %}
 {% endblock %}
