--- a/app/templates/post/create.html.twig
+++ b/app/templates/post/create.html.twig
@@ -1,14 +1,14 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    {{ 'title.task_create'|trans }}
+    {{ 'title.post_create'|trans }}
 {% endblock %}
 
 {% block body %}
     {% include 'default/_form.html.twig' with {
-        page_title: 'title.task_create'|trans,
+        page_title: 'title.post_create'|trans,
         form: form,
         submit_label: 'action.save'|trans,
-        back_to_list_path: 'task_index',
+        back_to_list_path: 'post_index',
     } %}
 {% endblock %}
