--- a/app/templates/comment/index.html.twig
+++ b/app/templates/comment/index.html.twig
@@ -20,8 +20,7 @@
                 <th>{{ knp_pagination_sortable(pagination, 'label.created_at'|trans, 'comment.createdAt') }}</th>
                 <th>{{ knp_pagination_sortable(pagination, 'label.updated_at'|trans, 'comment.updatedAt') }}</th>
                 <th>{{ knp_pagination_sortable(pagination, 'label.content'|trans, 'comment.content') }}</th>
-                <th>{{ knp_pagination_sortable(pagination, 'label.email'|trans, 'comment.email') }}</th>
-                <th>{{ knp_pagination_sortable(pagination, 'label.nick'|trans, 'comment.nick') }}</th>
+                <th>{{ knp_pagination_sortable(pagination, 'label.author'|trans, 'user.author') }}</th>
                 <th>{{ 'label.actions'|trans }}</th>
             </tr>
             </thead>
@@ -32,8 +31,7 @@
                     <td>{{ comment.createdAt|format_date('long') }}</td>
                     <td>{{ comment.updatedAt|format_date('long') }}</td>
                     <td>{{ comment.content }}</td>
-                    <td>{{ comment.email }}</td>
-                    <td>{{ comment.nick }}</td>
+                    <td>{{ comment.author.email }}</td>
                     <td>
                         <a href="{{ url('comment_show', {id: comment.id}) }}" title="{{ 'action.show'|trans }}" class="button">
                             {{ 'action.show'|trans }}
